tests/positive/keyword_args.rms
GROUP(
    VARCHAR("A-Z", 2, 3),
    OR,
    VARCHAR("a-z", 2, 3),
    INLINE @"hello",
    START VARCHAR("0-9", 1), END
)
