tests/negative/group1.rms
GROUP(
	TEXT("hello"),
	ANY(
		VARCHAR("0-9", 2),
		TEXT("text"),
		VARCHAR("a-z")
	)
)

